Adjust tab bar background color (and extra buttons in remote view background color) + Alignment on screen adjustments

--- a/LoopFollow/Application/Base.lproj/Main.storyboard
+++ b/LoopFollow/Application/Base.lproj/Main.storyboard
@@ -251,7 +251,7 @@
                                                 </subviews>
                                             </stackView>
                                         </subviews>
-                                        <color key="backgroundColor" systemColor="secondarySystemBackgroundColor"/>
+                                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="100" id="6is-PH-c9b"/>
                                             <constraint firstItem="XsT-6R-Vym" firstAttribute="height" secondItem="ikj-at-auF" secondAttribute="height" id="Flw-2U-D7z"/>
@@ -543,7 +543,7 @@
                     <tabBar key="tabBar" contentMode="scaleToFill" id="W28-zg-YXA">
                         <rect key="frame" x="0.0" y="975" width="768" height="49"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
-                        <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="0.0" colorSpace="custom" customColorSpace="sRGB"/>
+                        <color key="backgroundColor" systemColor="secondarySystemBackgroundColor"/>
                     </tabBar>
                     <connections>
                         <segue destination="9pv-A4-QxB" kind="relationship" relationship="viewControllers" id="u7Y-xg-7CH"/>
@@ -567,10 +567,10 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" alignment="center" spacing="12" translatesAutoresizingMaskIntoConstraints="NO" id="ns4-YC-Awz">
-                                <rect key="frame" x="20" y="160" width="335" height="459"/>
+                                <rect key="frame" x="20" y="190" width="335" height="479"/>
                                 <subviews>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Srr-Hj-3UX">
-                                        <rect key="frame" x="4" y="0.0" width="327" height="66.666666666666671"/>
+                                        <rect key="frame" x="4" y="0.0" width="327" height="70"/>
                                         <state key="normal" title="Button"/>
                                         <buttonConfiguration key="configuration" style="plain" image="fork.knife" catalog="system" imagePadding="8" cornerStyle="large" titleAlignment="center">
                                             <backgroundConfiguration key="background">
@@ -590,7 +590,7 @@
                                         </connections>
                                     </button>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="2Vg-R6-0Rz">
-                                        <rect key="frame" x="4" y="78.666666666666657" width="327" height="66.333333333333343"/>
+                                        <rect key="frame" x="4" y="82" width="327" height="69.666666666666686"/>
                                         <state key="normal" title="Button"/>
                                         <buttonConfiguration key="configuration" style="plain" image="drop.fill" catalog="system" imagePadding="8" cornerStyle="large" titleAlignment="center">
                                             <backgroundConfiguration key="background">
@@ -611,7 +611,7 @@
                                         </connections>
                                     </button>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="p4l-1b-Z8k">
-                                        <rect key="frame" x="4" y="157" width="327" height="66.666666666666686"/>
+                                        <rect key="frame" x="4" y="163.66666666666669" width="327" height="70"/>
                                         <state key="normal" title="Button"/>
                                         <buttonConfiguration key="configuration" style="plain" image="person.fill" catalog="system" imagePadding="8" cornerStyle="large" titleAlignment="center">
                                             <backgroundConfiguration key="background">
@@ -631,7 +631,7 @@
                                         </connections>
                                     </button>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="eWa-bY-PRf">
-                                        <rect key="frame" x="4" y="235.66666666666671" width="327" height="66.333333333333343"/>
+                                        <rect key="frame" x="4" y="245.66666666666666" width="327" height="69.666666666666657"/>
                                         <state key="normal" title="Button"/>
                                         <buttonConfiguration key="configuration" style="plain" image="target" catalog="system" imagePadding="8" cornerStyle="large" titleAlignment="center">
                                             <backgroundConfiguration key="background">
@@ -651,7 +651,7 @@
                                         </connections>
                                     </button>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="rGf-9p-ojZ">
-                                        <rect key="frame" x="153.66666666666666" y="314" width="27.666666666666657" height="66.666666666666686"/>
+                                        <rect key="frame" x="153.66666666666666" y="327.33333333333337" width="27.666666666666657" height="70"/>
                                         <state key="normal" title="Button"/>
                                         <buttonConfiguration key="configuration" style="plain" subtitle=" " cornerStyle="large">
                                             <backgroundConfiguration key="background">
@@ -669,26 +669,26 @@
                                         </buttonConfiguration>
                                     </button>
                                     <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" spacing="40" translatesAutoresizingMaskIntoConstraints="NO" id="ODT-WE-u0w">
-                                        <rect key="frame" x="20" y="392.66666666666663" width="295" height="66.333333333333314"/>
+                                        <rect key="frame" x="20" y="409.33333333333337" width="295" height="69.666666666666686"/>
                                         <subviews>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="KhR-eR-dZb">
-                                                <rect key="frame" x="0.0" y="0.0" width="71.666666666666671" height="66.333333333333329"/>
+                                                <rect key="frame" x="0.0" y="0.0" width="71.666666666666671" height="69.666666666666671"/>
                                                 <state key="normal" title="Button"/>
-                                                <buttonConfiguration key="configuration" style="tinted" image="pills.fill" catalog="system" cornerStyle="capsule">
+                                                <buttonConfiguration key="configuration" style="filled" image="pills.fill" catalog="system" cornerStyle="capsule">
                                                     <attributedString key="attributedTitle">
                                                         <fragment content=" "/>
                                                     </attributedString>
                                                     <color key="baseForegroundColor" systemColor="systemGrayColor"/>
-                                                    <color key="baseBackgroundColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                    <color key="baseBackgroundColor" systemColor="secondarySystemBackgroundColor"/>
                                                 </buttonConfiguration>
                                                 <connections>
                                                     <action selector="pillButtonTapped:" destination="4ie-sJ-hfo" eventType="touchUpInside" id="uLQ-hi-lLe"/>
                                                 </connections>
                                             </button>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="OA5-8m-SSK">
-                                                <rect key="frame" x="111.66666666666666" y="0.0" width="71.666666666666657" height="66.333333333333329"/>
+                                                <rect key="frame" x="111.66666666666666" y="0.0" width="71.666666666666657" height="69.666666666666671"/>
                                                 <state key="normal" title="Button"/>
-                                                <buttonConfiguration key="configuration" style="tinted" image="calendar.badge.plus" catalog="system" cornerStyle="capsule">
+                                                <buttonConfiguration key="configuration" style="filled" image="calendar.badge.plus" catalog="system" cornerStyle="capsule">
                                                     <attributedString key="attributedTitle">
                                                         <fragment content=" ">
                                                             <attributes>
@@ -706,16 +706,16 @@
                                                         </fragment>
                                                     </attributedString>
                                                     <color key="baseForegroundColor" systemColor="systemGrayColor"/>
-                                                    <color key="baseBackgroundColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                    <color key="baseBackgroundColor" systemColor="secondarySystemBackgroundColor"/>
                                                 </buttonConfiguration>
                                                 <connections>
                                                     <action selector="calendarButtonTapped:" destination="4ie-sJ-hfo" eventType="touchUpInside" id="vhj-8O-N3H"/>
                                                 </connections>
                                             </button>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Jms-cN-AzO">
-                                                <rect key="frame" x="223.33333333333329" y="0.0" width="71.666666666666657" height="66.333333333333329"/>
+                                                <rect key="frame" x="223.33333333333329" y="0.0" width="71.666666666666657" height="69.666666666666671"/>
                                                 <state key="normal" title="Button"/>
-                                                <buttonConfiguration key="configuration" style="tinted" image="list.bullet.clipboard" catalog="system" cornerStyle="capsule">
+                                                <buttonConfiguration key="configuration" style="filled" image="list.bullet.clipboard" catalog="system" cornerStyle="capsule">
                                                     <attributedString key="attributedTitle">
                                                         <fragment content=" ">
                                                             <attributes>
@@ -725,7 +725,7 @@
                                                         </fragment>
                                                     </attributedString>
                                                     <color key="baseForegroundColor" systemColor="systemGrayColor"/>
-                                                    <color key="baseBackgroundColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                    <color key="baseBackgroundColor" systemColor="secondarySystemBackgroundColor"/>
                                                 </buttonConfiguration>
                                                 <connections>
                                                     <action selector="menuButtonTapped:" destination="4ie-sJ-hfo" eventType="touchUpInside" id="9bV-aM-htf"/>
@@ -776,9 +776,9 @@
                             <constraint firstItem="qde-S1-0zf" firstAttribute="trailing" secondItem="ns4-YC-Awz" secondAttribute="trailing" constant="20" id="Hby-Md-VcH"/>
                             <constraint firstItem="AuC-IH-cun" firstAttribute="top" secondItem="qde-S1-0zf" secondAttribute="top" id="I97-VF-O3r"/>
                             <constraint firstItem="ns4-YC-Awz" firstAttribute="leading" secondItem="qde-S1-0zf" secondAttribute="leading" constant="20" id="Lxf-Mg-SV4"/>
-                            <constraint firstItem="ns4-YC-Awz" firstAttribute="top" secondItem="qde-S1-0zf" secondAttribute="top" constant="110" id="MKZ-4o-aUj"/>
+                            <constraint firstItem="ns4-YC-Awz" firstAttribute="top" secondItem="qde-S1-0zf" secondAttribute="top" constant="140" id="MKZ-4o-aUj"/>
                             <constraint firstItem="qde-S1-0zf" firstAttribute="trailing" secondItem="AuC-IH-cun" secondAttribute="trailing" constant="12" id="PDf-VX-rV6"/>
-                            <constraint firstItem="qde-S1-0zf" firstAttribute="bottom" secondItem="ns4-YC-Awz" secondAttribute="bottom" constant="110" id="SgO-Lo-oHR"/>
+                            <constraint firstItem="qde-S1-0zf" firstAttribute="bottom" secondItem="ns4-YC-Awz" secondAttribute="bottom" constant="60" id="SgO-Lo-oHR"/>
                             <constraint firstItem="AuC-IH-cun" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="qde-S1-0zf" secondAttribute="leading" symbolic="YES" id="aPj-IA-K2k"/>
                             <constraint firstItem="ns4-YC-Awz" firstAttribute="centerX" secondItem="C1V-fP-B5M" secondAttribute="centerX" id="byz-Xb-czv"/>
                         </constraints>
